

set(UV_TEST_SOURCES
    ${BASE}/test/blackhole-server.c
    ${BASE}/test/echo-server.c
    ${BASE}/test/run-tests.c
    ${BASE}/test/runner.c
    ${BASE}/test/runner.h
    ${BASE}/test/test-get-loadavg.c
    ${BASE}/test/task.h
    ${BASE}/test/test-active.c
    ${BASE}/test/test-async.c
    ${BASE}/test/test-async-null-cb.c
    ${BASE}/test/test-callback-stack.c
    ${BASE}/test/test-callback-order.c
    ${BASE}/test/test-close-fd.c
    ${BASE}/test/test-close-order.c
    ${BASE}/test/test-connect-unspecified.c
    ${BASE}/test/test-connection-fail.c
    ${BASE}/test/test-cwd-and-chdir.c
    ${BASE}/test/test-default-loop-close.c
    ${BASE}/test/test-delayed-accept.c
    ${BASE}/test/test-eintr-handling.c
    ${BASE}/test/test-error.c
    ${BASE}/test/test-embed.c
    ${BASE}/test/test-emfile.c
    ${BASE}/test/test-env-vars.c
    ${BASE}/test/test-fail-always.c
    ${BASE}/test/test-fork.c
    ${BASE}/test/test-fs.c
    ${BASE}/test/test-fs-copyfile.c
    ${BASE}/test/test-fs-event.c
    ${BASE}/test/test-getters-setters.c
    ${BASE}/test/test-get-currentexe.c
    ${BASE}/test/test-get-memory.c
    ${BASE}/test/test-get-passwd.c
    ${BASE}/test/test-getaddrinfo.c
    ${BASE}/test/test-gethostname.c
    ${BASE}/test/test-getnameinfo.c
    ${BASE}/test/test-getsockname.c
    ${BASE}/test/test-handle-fileno.c
    ${BASE}/test/test-homedir.c
    ${BASE}/test/test-hrtime.c
    ${BASE}/test/test-idle.c
    ${BASE}/test/test-ip6-addr.c
    ${BASE}/test/test-ipc.c
    ${BASE}/test/test-ipc-send-recv.c
    ${BASE}/test/test-list.h
    ${BASE}/test/test-loop-handles.c
    ${BASE}/test/test-loop-alive.c
    ${BASE}/test/test-loop-close.c
    ${BASE}/test/test-loop-stop.c
    ${BASE}/test/test-loop-time.c
    ${BASE}/test/test-loop-configure.c
    ${BASE}/test/test-walk-handles.c
    ${BASE}/test/test-watcher-cross-stop.c
    ${BASE}/test/test-multiple-listen.c
    ${BASE}/test/test-osx-select.c
    ${BASE}/test/test-pass-always.c
    ${BASE}/test/test-ping-pong.c
    ${BASE}/test/test-pipe-bind-error.c
    ${BASE}/test/test-pipe-connect-error.c
    ${BASE}/test/test-pipe-connect-multiple.c
    ${BASE}/test/test-pipe-connect-prepare.c
    ${BASE}/test/test-pipe-getsockname.c
    ${BASE}/test/test-pipe-pending-instances.c
    ${BASE}/test/test-pipe-sendmsg.c
    ${BASE}/test/test-pipe-server-close.c
    ${BASE}/test/test-pipe-close-stdout-read-stdin.c
    ${BASE}/test/test-pipe-set-non-blocking.c
    ${BASE}/test/test-pipe-set-fchmod.c
    ${BASE}/test/test-platform-output.c
    ${BASE}/test/test-poll.c
    ${BASE}/test/test-poll-close.c
    ${BASE}/test/test-poll-close-doesnt-corrupt-stack.c
    ${BASE}/test/test-poll-closesocket.c
    ${BASE}/test/test-poll-oob.c
    ${BASE}/test/test-process-title.c
    ${BASE}/test/test-process-title-threadsafe.c
    ${BASE}/test/test-queue-foreach-delete.c
    ${BASE}/test/test-ref.c
    ${BASE}/test/test-run-nowait.c
    ${BASE}/test/test-run-once.c
    ${BASE}/test/test-semaphore.c
    ${BASE}/test/test-shutdown-close.c
    ${BASE}/test/test-shutdown-eof.c
    ${BASE}/test/test-shutdown-twice.c
    ${BASE}/test/test-signal.c
    ${BASE}/test/test-signal-multiple-loops.c
    ${BASE}/test/test-socket-buffer-size.c
    ${BASE}/test/test-spawn.c
    ${BASE}/test/test-fs-poll.c
    ${BASE}/test/test-stdio-over-pipes.c
    ${BASE}/test/test-tcp-alloc-cb-fail.c
    ${BASE}/test/test-tcp-bind-error.c
    ${BASE}/test/test-tcp-bind6-error.c
    ${BASE}/test/test-tcp-close.c
    ${BASE}/test/test-tcp-close-accept.c
    ${BASE}/test/test-tcp-close-while-connecting.c
    ${BASE}/test/test-tcp-create-socket-early.c
    ${BASE}/test/test-tcp-connect-error-after-write.c
    ${BASE}/test/test-tcp-shutdown-after-write.c
    ${BASE}/test/test-tcp-flags.c
    ${BASE}/test/test-tcp-connect-error.c
    ${BASE}/test/test-tcp-connect-timeout.c
    ${BASE}/test/test-tcp-connect6-error.c
    ${BASE}/test/test-tcp-open.c
    ${BASE}/test/test-tcp-write-to-half-open-connection.c
    ${BASE}/test/test-tcp-write-after-connect.c
    ${BASE}/test/test-tcp-writealot.c
    ${BASE}/test/test-tcp-write-fail.c
    ${BASE}/test/test-tcp-try-write.c
    ${BASE}/test/test-tcp-unexpected-read.c
    ${BASE}/test/test-tcp-oob.c
    ${BASE}/test/test-tcp-read-stop.c
    ${BASE}/test/test-tcp-write-queue-order.c
    ${BASE}/test/test-threadpool.c
    ${BASE}/test/test-threadpool-cancel.c
    ${BASE}/test/test-thread-equal.c
    ${BASE}/test/test-tmpdir.c
    ${BASE}/test/test-mutexes.c
    ${BASE}/test/test-thread.c
    ${BASE}/test/test-barrier.c
    ${BASE}/test/test-condvar.c
    ${BASE}/test/test-timer-again.c
    ${BASE}/test/test-timer-from-check.c
    ${BASE}/test/test-timer.c
    ${BASE}/test/test-tty.c
    ${BASE}/test/test-udp-alloc-cb-fail.c
    ${BASE}/test/test-udp-bind.c
    ${BASE}/test/test-udp-create-socket-early.c
    ${BASE}/test/test-udp-dgram-too-big.c
    ${BASE}/test/test-udp-ipv6.c
    ${BASE}/test/test-udp-open.c
    ${BASE}/test/test-udp-options.c
    ${BASE}/test/test-udp-send-and-recv.c
    ${BASE}/test/test-udp-send-hang-loop.c
    ${BASE}/test/test-udp-send-immediate.c
    ${BASE}/test/test-udp-send-unreachable.c
    ${BASE}/test/test-udp-multicast-join.c
    ${BASE}/test/test-udp-multicast-join6.c
    ${BASE}/test/test-dlerror.c
    ${BASE}/test/test-udp-multicast-ttl.c
    ${BASE}/test/test-ip4-addr.c
    ${BASE}/test/test-ip6-addr.c
    ${BASE}/test/test-udp-multicast-interface.c
    ${BASE}/test/test-udp-multicast-interface6.c
    ${BASE}/test/test-udp-try-send.c
    )

set(UV_TEST_LIBS uv)

if(win32)
    set(UV_TEST_SOURCES ${UV_TEST_SOURCES}
        ${BASE}/test/runner-win.c
        ${BASE}/test/runner-win.h
        ${BASE}/src/win/snprintf.c
        )
    set(UV_TEST_LIBS ${UV_TEST_LIBS} ws2_32)
endif(win32)


add_executable(run-tests ${UV_TEST_SOURCES})
target_link_libraries(run-tests ${UV_TEST_LIBS})
target_include_directories(run-tests PUBLIC ${BASE}/include)

